--- a/.gitignore
+++ b/.gitignore
@@ -172,8 +172,8 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
-# Pytorch model files
-*.pth
+# # Pytorch model files
+# *.pth
 
-# CSV data files
-*.csv
+# # CSV data files
+# *.csv
